<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstLab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="students_name">Name</string>
    <string name="students_mail">Mail</string>
    <string name="students_phone_number">+375(code)*******</string>
    <string name="first_lab_label">First Lab</string>
    <string name="add_student">Add</string>
    <string name="find_student">Find</string>
    <string name="send_data">Send</string>
    <string name="caller">Caller</string>
    <string name="find_student_by_name">Find by name</string>
    <string name="make_a_call">Make a call</string>
    <string name="walter">Walter Trippel</string>
    <string name="presents">presents</string>
    <string name="all_students">List</string>

</resources>
