<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/lab_caller"
        android:text="@string/caller"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/label_name"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lab_caller"
        android:text="@string/find_student_by_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Labels"/>

    <EditText
        android:id="@+id/field_name"
        android:hint="@string/students_name"
        android:layout_below="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/label"/>

    <TextView
        android:id="@+id/viewMiddleInvisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/find_student"
        android:text="@string/find_student"
        android:background="@drawable/main_round_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/viewMiddleInvisible"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/all_students"
        android:text="@string/all_students"
        android:background="@drawable/main_round_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/viewMiddleInvisible"
        android:layout_marginRight="5dp"/>

</RelativeLayout>
