<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/first_lab_label"
        android:text="@string/first_lab_label"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/label_name"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/first_lab_label"
        android:text="@string/students_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Labels"/>

    <EditText
        android:id="@+id/field_name"
        android:hint="@string/students_name"
        android:layout_below="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/label"/>

    <TextView
        android:id="@+id/label_mail"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/field_name"
        android:text="@string/students_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Labels"/>

    <EditText
        android:id="@+id/field_mail"
        android:hint="@string/students_mail"
        android:layout_below="@+id/label_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/label"/>

    <TextView
        android:id="@+id/label_phone_number"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/field_mail"
        android:text="@string/students_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Labels"/>

    <EditText
        android:id="@+id/field_phone_number"
        android:hint="@string/students_phone_number"
        android:layout_below="@+id/label_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/label"/>

    <TextView
        android:id="@+id/viewMiddleInvisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <Button
        android:id="@+id/add_student"
        android:text="@string/add_student"
        android:background="@drawable/main_round_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/viewMiddleInvisible"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/send_data"
        android:text="@string/send_data"
        android:background="@drawable/main_round_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/add_student"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>
